--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="12-col-css_framework">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/12-col-css_framework.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>12-bool</title>
 </head>
 <body>
+    
+    <main>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-1 pink">1-col</div>
+                <div class="col-1 pink">1-col</div>
+                <div class="col-1 pink">1-col</div>
+                <div class="col-1 pink">1-col</div>
+                <div class="col-1 pink">1-col</div>
+                <div class="col-1 pink">1-col</div>
+                <div class="col-1 pink">1-col</div>
+                <div class="col-1 pink">1-col</div>
+                <div class="col-1 pink">1-col</div>
+                <div class="col-1 pink">1-col</div>
+                <div class="col-1 pink">1-col</div>
+                <div class="col-1 pink">1-col</div>
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
