--- a/index.html
+++ b/index.html
@@ -14,20 +14,64 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-1 pink">1-col</div>
-                <div class="col-1 pink">1-col</div>
-                <div class="col-1 pink">1-col</div>
-                <div class="col-1 pink">1-col</div>
-                <div class="col-1 pink">1-col</div>
-                <div class="col-1 pink">1-col</div>
-                <div class="col-1 pink">1-col</div>
-                <div class="col-1 pink">1-col</div>
-                <div class="col-1 pink">1-col</div>
-                <div class="col-1 pink">1-col</div>
-                <div class="col-1 pink">1-col</div>
-                <div class="col-1 pink">1-col</div>
+                <div class="col-xs-1 pink">1-col</div>
+                <div class="col-xs-1 pink">1-col</div>
+                <div class="col-xs-1 pink">1-col</div>
+                <div class="col-xs-1 pink">1-col</div>
+                <div class="col-xs-1 pink">1-col</div>
+                <div class="col-xs-1 pink">1-col</div>
+                <div class="col-xs-1 pink">1-col</div>
+                <div class="col-xs-1 pink">1-col</div>
+                <div class="col-xs-1 pink">1-col</div>
+                <div class="col-xs-1 pink">1-col</div>
+                <div class="col-xs-1 pink">1-col</div>
+                <div class="col-xs-1 pink">1-col</div>
             </div>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 pink">12-col</div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-8 pink">8-col</div>
+                <div class="col-xs-2 pink">2-col</div>
+                <div class="col-xs-2 pink">2-col</div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-1 pink">1-col</div>
+                <div class="col-xs-2 pink">2-col</div>
+                <div class="col-xs-2 pink">2-col</div>
+                <div class="col-xs-6 pink">6-col</div>
+                <div class="col-xs-1 pink">1-col</div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-6 pink">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xs-2 pinky">Nested 2 col</div>
+                            <div class="col-xs-2 pinky">Nested 2 col</div>
+                            <div class="col-xs-8 pinky">Nested 8 col</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 pink">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xs-2 pinky">Nested 2 col</div>
+                            <div class="col-xs-2 pinky">Nested 2 col</div>
+                            <div class="col-xs-8 pinky">Nested 8 col</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
     
 </body>
