--- a/index.html
+++ b/index.html
@@ -54,18 +54,27 @@
                 <div class="col-xs-6 pink">
                     <div class="container">
                         <div class="row">
-                            <div class="col-xs-2 pinky">Nested 2 col</div>
-                            <div class="col-xs-2 pinky">Nested 2 col</div>
-                            <div class="col-xs-8 pinky">Nested 8 col</div>
+                            <div class="col-xs-2 pinky">
+                                <span>Nested <br> 2 col</span>
+                            </div>
+                            <div class="col-xs-2 pinky">
+                                <span>Nested <br> 2 col</span>
+                            </div>
+                            <div class="col-xs-8 pinky">
+                                <span>Nested 8 col</span>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-6 pink">
                     <div class="container">
                         <div class="row">
-                            <div class="col-xs-2 pinky">Nested 2 col</div>
-                            <div class="col-xs-2 pinky">Nested 2 col</div>
-                            <div class="col-xs-8 pinky">Nested 8 col</div>
+                            <div class="col-xs-6 pinky">
+                                <span>Nested 6 col</span>
+                            </div>
+                            <div class="col-xs-6 pinky">
+                                <span>Nested 6 col</span>
+                            </div>
                         </div>
                     </div>
                 </div>
